--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "sequelize": "^6.12.1"
   },
   "devDependencies": {
-    "chia": "^0.0.1",
+    "chai": "^4.3.4",
     "dotenv": "^10.0.0",
     "mocha": "^9.1.3",
     "nodemon": "^2.0.15",
