--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "chai": "^4.3.4",
     "dotenv": "^10.0.0",
+    "faker": "^5.5.3",
     "mocha": "^9.1.3",
     "nodemon": "^2.0.15",
     "supertest": "^6.1.6"
